== Planned

* Enhancements
  * Make Purchases with Cash Withdrawals easier
  * Automatically create a "Transfer" ChargeType when creating a new account.
  * Select Entries to put together as a PDF Report

== 1.5.0

== 1.4.2

* Bug Fix
  * Devise migrations fixed for Devise 2.0.0

== 1.4.1

* Refactoring
  * Gem dependencies updated:
    * Rails 3.2.0
    * Contour ~> 0.9.3
  * Devise migration and configuration file updated
  * Environment files updated to be in sync with Rails 3.2.0

== 1.4.0

* Enhancements
  * Update to Rails 3.2.0.rc2 and Contour 0.9.0
  * Updated jQuery Calls to use jQuery 1.7 specification (.live to .on)
  * Removed JavaScript functions that are provided by Contour
  * Existing entries can now be copied as templates for new entries

* Refactoring
  * Moved root path to be the entries calendar

* Bug Fix
  * Graphs now render correctly in IE7 and IE8
  * Autocomplete now works correctly when using a subdomain

* Testing
  * Test Coverage is now at 100% with help of SimpleCov
  * Continuous integration using TravisCI, http://travis-ci.org/remomueller/balance

== 1.3.0

* Enhancements
  * Update Rails to 3.1.1 and Contour 0.5.6
  * Changing months now uses jQuery Slide transition on the Month Overview
  * Clicking left and right in Month Overview will transition between months
  * Current Balance page now lets you calculate your maximum daily spending until your next paycheck (the default day is the beginning of the next month)

== 1.2.0

* Enhancements
  * Update Rails to 3.1.0.rc6
  * Major redesign using a better CSS base template (BlueTrip CSS Framework)
  * New entries made from calendar are now redirected back to the calendar
  * Main dashboard page broken down to Month Overview, Averages, and Current Balance Pages
  * Links added for easier navigation to and from accounts and charge types
  * Validation errors now correctly highlight invalid fields

* Testing