@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'rails', '3.2.0'
+gem 'rails', '3.2.1'
 
 # Database Adapter
 # Install instructions for Windows: http://blog.mmediasys.com/2011/07/07/installing-mysql-on-windows-7-x64-and-using-ruby-with-it/
@@ -9,16 +9,14 @@ gem 'thin',           '~> 1.3.1',           :platforms => [ :mswin, :mingw ]
 gem 'eventmachine',   '~> 1.0.0.beta.4.1',  :platforms => [ :mswin, :mingw ]
 
 # Gems used by project
-                                    # Contour: Basic Layout and Assets
-gem 'contour',        '~> 0.9.3'
-                                    # Kaminari: Pagination
-gem 'kaminari'
+gem 'contour',        '~> 0.9.3'    # Contour: Basic Layout and Assets
+gem 'kaminari'                      # Kaminari: Pagination
 
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails',   '~> 3.2.3'
-  gem 'coffee-rails', '~> 3.2.1'
+  gem 'sass-rails',   '~> 3.2.4'
+  gem 'coffee-rails', '~> 3.2.2'
   gem 'uglifier',     '>= 1.0.3'
 end
 
