@@ -7,6 +7,12 @@
 
 == 1.5.0
 
+* Refactoring
+  * Updated to Rails 3.2.1 and fixed Devise 2.0.0 locales file
+
+* Bug Fix
+  * Entry name autocomplete fixed
+
 == 1.4.2
 
 * Bug Fix
